tests/snapshots/run_wpt_conformance__litert_reduceL1_float16_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 float16 3D tensor options.keepDimensions=false, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL1 { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL1Input: f16[2, 3, 4];
  }

  nodes {
    [reduceL1Output] = reduceL1(reduceL1Input, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
