tests/snapshots/run_wpt_conformance__litert_reduceL1_float16_4D_tensor_options_axes_with_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 float16 4D tensor options.axes with options.keepDimensions=false, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL1 { input: 0, options: Some(MLReduceOptions { label: "", axes: Some([1, 3]), keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL1Input: f16[2, 2, 2, 3];
  }

  nodes {
    [reduceL1Output] = reduceL1(reduceL1Input, axes=[1, 3], keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
